<resources>
    <string name="app_name">Calculatrice</string>
    <string name="ac">AC</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="back">⬅</string>
    <string name="_9">9</string>
    <string name="min">-</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="power">^</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="mul">∗</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="sign">±</string>
    <string name="sqrt">√</string>
    <string name="percent">%</string>
    <string name="recip">⅟</string>
</resources>