<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C2D4E4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:gravity="center|end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textColor="#000002"
        android:textSize="32sp"
        android:textStyle="bold"
        android:background="#BDBABD"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:layout_marginHorizontal="10dp"
       />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/back"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/back"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/ac"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/c"
            android:layout_margin="5dp"
            android:textColor="#DC4343"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/power"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/power"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/div"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/div"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/sign"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/sign"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sqrt"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/sqrt"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/percent"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/percent"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/recip"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="ButtonClick"
            android:text="@string/recip"
            android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="35sp"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/seven"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/eight"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/nine"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/mul"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/mul"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/four"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/five"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/six"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/min"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/min"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <Button
            android:id="@+id/one"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/two"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/three"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/plus"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/zero"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/_0"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#BDBABD"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/point"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/point"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/equal"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/equal"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="ButtonClick"
            android:textColor="#000000"
            android:backgroundTint="#9FAFCF"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>